Revision history for {{$dist->name}}

{{$NEXT}}

  [BUG FIX]

    * resolve RT#141012, always call overload::Method with three arguments. HVDS++

    * sequences did not correctly handle exhaustion => 'throw' or
      exhaustion => [ return => $sentinel ]

  [DOCUMENTATION]

    * rework Iterator::Flex::Manual:Authoring


0.14      2021-10-06 15:00:47-04:00 America/New_York

  [BUILD]

    * require Role::Tiny >= 2.002004, or role composition doesn't work correctly.

0.13      2021-10-06 11:24:26-04:00 America/New_York

  [BUG FIX]

    * incorrectly set %INC value to undef to register generated module; caused failures under
      Perl >= 5.32

  [DOCUMENTATION]

    * updates


0.12      2021-10-05 17:40:04-04:00 America/New_York

    * First public release

  [INCOMPATIBILITY]

    * explicitly requires Perl v5.28
    * yet another radical API change and refactoring. hopefully the
      last!

  [ENHANCEMENTS]

    * lots of documentation. still not complete
    * better handling of proxy iterators
    * beginning of error handling


  [TODO]

    * icycle should handle any rewindable iterator, not just arrays


0.11      2020-04-30 10:48:47-04:00 America/New_York

  [INCOMPATIBILITY]

    * explicitly requires Perl 5.10.0.

  [API_CHANGE]

    * native iterators must use the 'self' rather than 'set_self'
      attributes to provide access to the closed-over self.

  [REFACTOR]

    * new iterator exhaustion model cleanly separates exhaustion
      transition policies (return/throw) and handling imported
      iterables' policies (pass through, replace).

    * robust handling of imported iterables exhaustion sentinels or
      exceptions.

  [BUILD]

    * now uses Module::Build::Tiny


0.10      2018-09-16 18:21:49-04:00 America/New_York

  [REFACTOR]

    * Internal refactor to improve performance and simplify code

    * Iterator classes are constructed directly without requiring
      parsing of the attribute hash.
